test/syntax/fail/lexer/char/invalid_escape_sequence.expected
File "dummy.sync", line 1, character 14:
 1 | let f x = '\p'
                  ^

Error: Invalid escape sequence.
